--- a/scouting/old-yearly/2022/app/src/main/res/values/strings.xml
+++ b/scouting/old-yearly/2022/app/src/main/res/values/strings.xml
@@ -33,6 +33,6 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
 </resources>
