--- a/operations-manual/pages/Programming/Workshop/Vscode/index.mdx
+++ b/operations-manual/pages/Programming/Workshop/Vscode/index.mdx
@@ -1,7 +1,10 @@
-import PopupEditor from '../components/popupEditor';
+[//]: # (import PopupEditor from '../components/popupEditor';)
 
-# Live Code Editor
+[//]: # ()
+[//]: # (# Live Code Editor)
 
-Welcome to the Liveblocks code editor page.
+[//]: # ()
+[//]: # (Welcome to the Liveblocks code editor page.)
 
-<PopupEditor />
+[//]: # ()
+[//]: # (<PopupEditor />)
