--- a/operations-manual/pages/index.mdx
+++ b/operations-manual/pages/index.mdx
@@ -1,5 +1,8 @@
 import { Cards, Card } from 'nextra/components'
 
+import { FaCode, FaExpeditedssl, FaPlug, FaCube, FaRegLightbulb, FaBuildingShield } from "react-icons/fa6";
+import {ImCogs} from "react-icons/im";
+
 # Welcome to FRC Team 201's Tools and Resources
 
 Welcome to FRC Team 201's Tools and Resources! This guide is a comprehensive collection of tutorials, notes, and resources designed to help you master the tools and technologies used by our team. Whether you're a new member just starting your robotics journey or a seasoned veteran looking to sharpen your skills, this guide has something for everyone. It's a work in progress and will be updated regularly with new content and resources.
@@ -11,25 +14,34 @@ Welcome to FRC Team 201's Tools and Resources! This guide is a comprehensive col
 To support your learning journey, we have a variety of subgroups that focus on different aspects of robotics. These include:
 
 <Cards>
-    <Card title="Programming" href="/Programming/Tools&Setup">
+    <Card title="Programming" href="/Programming/Tools&Setup" icon={FaCode()}>
         The programming subgroup focuses on developing the software that controls the robot. Members learn programming languages like Java and C++ and work on autonomous routines and driver controls.
     </Card>
-    <Card title="Electrical" href="/Electrical">
+    <Card title="Electrical" href="/Electrical" icon={FaPlug()}>
         The electrical subgroup is responsible for designing and wiring the electrical systems on the robot. Members learn about circuits, sensors, and power distribution.
     </Card>
-    <Card title="CAD" href="/CAD">
+    <Card title="CAD" href="/CAD" icon={FaCube()}>
         The CAD subgroup uses computer-aided design software to create 3D models of the robot. Members learn about mechanical design and create detailed drawings for manufacturing.
     </Card>
-    <Card title="Mechanical" href="/Mechanical">
+    <Card title="Mechanical" href="/Mechanical" icon={ImCogs ()}>
         The mechanical subgroup designs and builds the physical structure of the robot. Members work with tools, materials, and CAD software to create the robot's components.
     </Card>
-    <Card title="Strategy" href="/Strategy">
+    <Card title="Strategy" href="/Strategy" icon={FaRegLightbulb ()}>
         The strategy subgroup analyzes game data and develops game strategies for competitions. Members work on scouting, match analysis, and robot performance optimization.
     </Card>
-    <Card title="Business" href="/card">
+    <Card title="Business" href="/card" icon={FaBuildingShield ()}>
         The business subgroup focuses on fundraising, marketing, and team outreach. Members work on sponsorships, social media, and community events.
     </Card>
 
 </Cards>
 
+## Experiences
+
+We have put together what we did each week in the 2025 season. This is a great way to see what we did and what you can expect to do in the future.
+
+<Cards>
+    <Card title="2025 Season" href="/Experiences/2025" icon={FaExpeditedssl()}>
+        Check out our weekly experiences from the 2025 season to see what we did each week and what you can expect in the future.
+    </Card>
+</Cards>
 
