--- a/operations-manual/pages/Programming/Subsystems/SubsystemOverview.mdx
+++ b/operations-manual/pages/Programming/Subsystems/SubsystemOverview.mdx
@@ -33,15 +33,15 @@ We use Java object-oriented programming to program our robot. We create subsyste
 
 ![robot img](https:///i.imgur.com/aVyfHJK.png)
 
-* Image of FRC 201's 2024 Robot, SPYDER.
-* Intake, arm, and shooter subsystems can be seen.
+* CAD Image of FRC **Team 201's 2024 Robot**, **<u>SPYDER</u>**.
+* Intake, arm, swerve, and shooter subsystems can be seen.
 
 ### Subsystem & Code Examples:
 
 <Cards>
 <Card title="Arm" target="_self" emoji={"🦾"} href="../Subsystems/Arm" />
-<Card title="shooter" target="_self" emoji={"🔫"} href="../Subsystems/Shooter" />
-<Card title="intake" target="_self" emoji={"➡"} href="../Subsystems/Intake" />
+<Card title="Shooter" target="_self" emoji={"🔫"} href="../Subsystems/Shooter" />
+<Card title="Intake" target="_self" emoji={"➡"} href="../Subsystems/Intake" />
 <Card title="Drive Base" target="_self" emoji={"🛞"} href="../Subsystems/DriveBase" />
 
 </Cards>
