--- a/operations-manual/pages/index.mdx
+++ b/operations-manual/pages/index.mdx
@@ -20,16 +20,16 @@ To support your learning journey, we have a variety of subgroups that focus on d
     <Card title="Electrical" href="/Electrical" icon={FaPlug()}>
         The electrical subgroup is responsible for designing and wiring the electrical systems on the robot. Members learn about circuits, sensors, and power distribution.
     </Card>
-    <Card title="CAD" href="/CAD" icon={FaCube()}>
+    <Card title="CAD" href="/CAD/Introduction" icon={FaCube()} >
         The CAD subgroup uses computer-aided design software to create 3D models of the robot. Members learn about mechanical design and create detailed drawings for manufacturing.
     </Card>
-    <Card title="Mechanical" href="/Mechanical" icon={ImCogs ()}>
+    <Card title="Mechanical" href="/Mechanical" icon={ImCogs()}>
         The mechanical subgroup designs and builds the physical structure of the robot. Members work with tools, materials, and CAD software to create the robot's components.
     </Card>
-    <Card title="Strategy" href="/Strategy" icon={FaRegLightbulb ()}>
+    <Card title="Strategy" href="/Strategy" icon={FaRegLightbulb()}>
         The strategy subgroup analyzes game data and develops game strategies for competitions. Members work on scouting, match analysis, and robot performance optimization.
     </Card>
-    <Card title="Business" href="/card" icon={FaBuildingShield ()}>
+    <Card title="Business" href="/card" icon={FaBuildingShield()}>
         The business subgroup focuses on fundraising, marketing, and team outreach. Members work on sponsorships, social media, and community events.
     </Card>
 
